--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,10 @@ nav .navbar-nav li a {
   color: #00d8ff;
 }
 
+.mailChimpIcon {
+  color: #3f3f3b;
+}
+
 /* Images */
 
 /* Fade out js cancles it */
